--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.18.1
-streamlit==1.35.0
-pandas==2.2.2
-plotly==5.22.0
-altair==4.2.2
+seaborn==0.12.2
+plotly==5.13.1
+scipy==1.10.1
+pandas>=2.2.0
